WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
156807
We don't need a manual stack for an RAII object when the machine's stack will do just fine
https://bugs.webkit.org/show_bug.cgi?id=156807
Summary
We don't need a manual stack for an RAII object when the machine's stack will...
Saam Barati
Reported
2016-04-20 13:31:28 PDT
...
Attachments
patch
(2.92 KB, patch)
2016-04-20 13:36 PDT
,
Saam Barati
mark.lam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Oliver Hunt
Comment 1
2016-04-20 13:32:36 PDT
need moar context?
Saam Barati
Comment 2
2016-04-20 13:36:18 PDT
Created
attachment 276849
[details]
patch
Mark Lam
Comment 3
2016-04-20 13:39:11 PDT
Comment on
attachment 276849
[details]
patch r=me
Saam Barati
Comment 4
2016-04-20 14:47:41 PDT
landed in:
http://trac.webkit.org/changeset/199787
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug